Courses component styling done

--- a/src/app/addlist/addlist.component.html
+++ b/src/app/addlist/addlist.component.html
@@ -1,6 +1,6 @@
 <div class = 'main'>
   <h1>
-    Item's List
+    Courses
   </h1>
   <div class="addItem">
       <input [(ngModel)] = "newCourse" placeholder="Add Item" class="addText">
