--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
   <h1>
     Welcome to {{ title }}!
   </h1>
-
-<a routerLink='/courses'>List of Courses</a>
-<a routerLink=''>Close</a>
+<a routerLink='/courses' style='margin-right:50px'>List of Courses</a>
+<a routerLink='' style='margin-left:50px'>Close</a>
 <router-outlet></router-outlet>
+</div>
 
