Login component added and styled

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<div>
+  <a routerLink='/login' style='margin-right:50px; float:right'>Login</a></div>
 <div style="text-align:center">
-  <h1>
+  <h1 style="margin-left:75px">
     Welcome to {{ title }}!
   </h1>
+  <a routerLink='' style='margin-right:50px'>Home</a>
 <a routerLink='/courses' style='margin-right:50px'>List of Courses</a>
-<a routerLink='' style='margin-left:50px'>Close</a>
-<router-outlet></router-outlet>
-</div>
 
+</div>
+<router-outlet></router-outlet>
